--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "body-parser": "1.18.3",
     "express": "4.16.3",
-    "mongoose": "^5.1.7"
+    "mongoose": "5.1.7"
   },
   "devDependencies": {
     "nodemon": "^1.17.5"
